Bizfi Production/src/objects/Volume_Bonus_History__c.object
<CustomObject>
    <fields>
        <fullName>All_Contracts_In__c</fullName>
        <label>All - Contracts In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Contracts_Out__c</fullName>
        <label>All - Contracts Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Current_Bonus__c</fullName>
        <label>All - Current Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Current_Booking_Rate__c</fullName>
        <label>All - Current Booking Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Current_Payout__c</fullName>
        <label>All - Current Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Current_Total_Funding__c</fullName>
        <label>All - Current Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Next_Tier_Difference__c</fullName>
        <label>All - Next Tier Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Next_Tier_Min_Bonus__c</fullName>
        <label>All - Next Tier Min Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Next_Tier_Min_Volume__c</fullName>
        <label>All - Next Tier Min Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Next_Tier_Payout__c</fullName>
        <label>All - Next Tier Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Potential_Bonus__c</fullName>
        <label>All - Potential Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_Potential_Payout__c</fullName>
        <label>All - Potential Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Potential_Total_Funding__c</fullName>
        <label>All - Potential Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Volume Bonus Histories</relationshipLabel>
        <relationshipName>Volume_Bonus_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contracts_In__c</fullName>
        <label>New - Contracts In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Contracts_Out__c</fullName>
        <label>New - Contracts Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Current_Bonus__c</fullName>
        <label>New - Current Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Current_Booking_Rate__c</fullName>
        <label>New - Current Booking Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Current_Payout__c</fullName>
        <label>New - Current Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Current_Total_Funding__c</fullName>
        <label>New - Current Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Next_Tier_Difference__c</fullName>
        <label>New - Next Tier Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Next_Tier_Min_Bonus__c</fullName>
        <label>New - Next Tier Min Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Next_Tier_Min_Volume__c</fullName>
        <label>New - Next Tier Min Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Next_Tier_Payout__c</fullName>
        <label>New - Next Tier Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Potential_Bonus__c</fullName>
        <label>New - Potential Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Potential_Payout__c</fullName>
        <label>New - Potential Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Potential_Total_Funding__c</fullName>
        <label>New - Potential Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Contracts_In__c</fullName>
        <label>Renewals - Contracts In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Contracts_Out__c</fullName>
        <label>Renewals - Contracts Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Current_Bonus__c</fullName>
        <label>Renewals - Current Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Current_Booking_Rate__c</fullName>
        <label>Renewals - Current Booking Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewals_Current_Payout__c</fullName>
        <label>Renewals - Current Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewals_Current_Total_Funding__c</fullName>
        <label>Renewals - Current Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Next_Tier_Difference__c</fullName>
        <label>Renewals - Next Tier Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Next_Tier_Min_Bonus__c</fullName>
        <label>Renewals - Next Tier Min Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Next_Tier_Min_Volume__c</fullName>
        <label>Renewals - Next Tier Min Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Next_Tier_Payout__c</fullName>
        <label>Renewals - Next Tier Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewals_Potential_Bonus__c</fullName>
        <label>Renewals - Potential Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewals_Potential_Payout__c</fullName>
        <label>Renewals - Potential Payout %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewals_Potential_Total_Funding__c</fullName>
        <label>Renewals - Potential Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Transaction Line History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <label>Volume Bonus History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VBH-{000000}</displayFormat>
        <label>Volume Bonus History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Bonus Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>